--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@slack/bolt": "^3.17.1",
+    "@slack/events-api": "^3.0.1",
+    "@slack/web-api": "^7.0.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
+    "ngrok": "^5.0.0-beta.2",
     "slackbots": "^1.3.0"
   }
 }
